--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,8 @@ dependencies:
 
   # Networking
   dio: ^5.4.3+1
-
+  envied: ^0.5.4+1
+  
   # State Management
   flutter_riverpod: ^2.5.1
   riverpod_annotation: ^2.3.5
@@ -33,6 +34,7 @@ dependencies:
   # Utils
   record: ^5.0.5
   path_provider: ^2.1.3
+  
 
 dev_dependencies:
   flutter_test:
@@ -44,6 +46,7 @@ dev_dependencies:
   riverpod_generator: ^2.4.0
   freezed: ^2.5.2
   json_serializable: ^6.8.0
+  envied_generator: ^0.5.4+1
 
 flutter_gen:
   output: lib/gen/
